--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "hospital-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hospital-frontend-yqqz.onrender.com", 
+
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -12,18 +14,21 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.0.0"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,3 +42,4 @@
     ]
   }
 }
+
